fix github pages

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-    <script src="general.js?v=1"></script>
+    <script src="js/general.js?v=1"></script>
 
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
