--- a/en.html
+++ b/en.html
@@ -14,13 +14,13 @@
     <link rel="shortcut icon" href="favicon.ico">
 
 
-    <meta property="og:image" content="https://vivirenremoto.com/aoe/img/social.png">
-    <meta property="og:image:secure_url" content="https://vivirenremoto.com/aoe/img/social.png">
+    <meta property="og:image" content="https://vivirenremoto.github.io/ageofcv/img/social.png">
+    <meta property="og:image:secure_url" content="https://vivirenremoto.github.io/ageofcv/img/social.png">
     <meta property="og:image:alt" content="Age of Curriculum - Miquel Camps">
     <meta property="og:image:type" content="image/png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Age of Curriculum - Miquel Camps">
-    <meta name="twitter:image" content="https://vivirenremoto.com/aoe/img/social.png">
+    <meta name="twitter:image" content="https://vivirenremoto.github.io/ageofcv/img/social.png">
 
 
     <link rel="icon" href="img/icon_32_.png" sizes="32x32" />
