--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Kalam&family=Romanesco&display=swap" rel="stylesheet">
 
-    <link href="general.css?v=1" rel="stylesheet">
+    <link href="general.css?v=2" rel="stylesheet">
     <link rel="preload" href="img/paper.png" as="image">
     <link rel="shortcut icon" href="favicon.ico">
 
@@ -28,6 +28,10 @@
 </head>
 
 <body>
+
+
+    <a href="http://bit.ly/play_aoe" id="play" target="_blank"><img src="img/icon.png" align="absmiddle"> Jugar
+        Age of Empires</a>
 
 
     <div id="paper">
@@ -128,7 +132,9 @@
 
 
     <div id="special"><a href="?howtoturnthison"><img src="img/btn_car.png"></a><a href="?wololo"><img
-                src="img/btn_wololo.png"></a><a href="?"><img src="img/btn_villager.png"></a></div>
+                src="img/btn_wololo.png"></a><a href="?"><img src="img/btn_villager.png"></a><a
+            href="https://vivirenremoto.github.io/commandos/"><img src="img/btn_commandos.png"></a>
+    </div>
 
 
 
@@ -194,7 +200,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-    <script src="js/general.js?v=1"></script>
+    <script src="js/general.js?v=2"></script>
 
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
