--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 <body>
 
 
-    <a href="http://bit.ly/play_aoe" id="play" target="_blank"><img src="img/icon.png" align="absmiddle"> Jugar
-        Age of Empires</a>
+    <a href="http://bit.ly/play_aoe" id="play" target="_blank"><img src="img/icon.png" align="absmiddle"> Juego Age of
+        Empires</a>
 
 
     <div id="paper">
