--- a/en.html
+++ b/en.html
@@ -29,8 +29,8 @@
 
 <body>
 
-    <a href="http://bit.ly/play_aoe" id="play" target="_blank"><img src="img/icon.png" align="absmiddle"> Play Age of
-        Empires</a>
+    <a href="http://bit.ly/play_aoe" id="play" target="_blank"><img src="img/icon.png" align="absmiddle"> Age of
+        Empires Game</a>
 
 
     <div id="paper">
