--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Kalam&family=Romanesco&display=swap" rel="stylesheet">
 
-    <link href="general.css?v=2" rel="stylesheet">
+    <link href="general.css?v=3" rel="stylesheet">
     <link rel="preload" href="img/paper.png" as="image">
     <link rel="shortcut icon" href="favicon.ico">
 
@@ -30,8 +30,12 @@
 <body>
 
 
-    <a href="http://bit.ly/play_aoe" id="play" target="_blank"><img src="img/icon.png" align="absmiddle"> Juego Age of
-        Empires</a>
+
+
+    <a href="http://bit.ly/play_aoe" id="play" target="_blank"><img src="img/icon.png" align="absmiddle">
+        <span id="btn_cta" data-cta1="¿Nostalgia?" data-cta2="Comprar juego">¿Nostalgia?</span></a>
+
+
 
 
     <div id="paper">
@@ -197,7 +201,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-    <script src="js/general.js?v=2"></script>
+    <script src="js/general.js?v=3"></script>
 
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
