--- a/en.html
+++ b/en.html
@@ -31,7 +31,7 @@
 
 
 
-    <a href="http://bit.ly/play_aoe" id="play" target="_blank"><img src="img/icon.png" align="absmiddle">
+    <a href="https://bit.ly/aoe_play" id="play" target="_blank"><img src="img/icon.png" align="absmiddle">
         <span id="btn_cta" data-cta1="Nostalgia?" data-cta2="Buy game">Nostalgia?</span></a>
 
 
