--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 
 
-    <a href="http://bit.ly/play_aoe" id="play" target="_blank"><img src="img/icon.png" align="absmiddle">
+    <a href="https://bit.ly/aoe_jugar" id="play" target="_blank"><img src="img/icon.png" align="absmiddle">
         <span id="btn_cta" data-cta1="¿Nostalgia?" data-cta2="Comprar juego">¿Nostalgia?</span></a>
 
 
