--- a/index.html
+++ b/index.html
@@ -10,7 +10,43 @@
     <link href="https://fonts.googleapis.com/css2?family=Kalam&family=Romanesco&display=swap" rel="stylesheet">
 
     <link href="general.css?v=3" rel="stylesheet">
-    <link rel="preload" href="img/paper.png" as="image">
+
+
+    <link rel="prefetch" href="img/paper.png" />
+    <link rel="prefetch" href="img/icon.png" />
+    <link rel="prefetch" href="img/btn_car.png" />
+    <link rel="prefetch" href="img/btn_wololo.png" />
+    <link rel="prefetch" href="img/btn_villager.png" />
+    <link rel="prefetch" href="img/btn_commandos.png" />
+    <link rel="prefetch" href="img/villager_walking.gif" />
+    <link rel="prefetch" href="img/wololo.png" />
+    <link rel="prefetch" href="img/grass.jpg" />
+    <link rel="prefetch" href="img/sand.jpg" />
+    <link rel="prefetch" href="img/snow.jpg" />
+    <link rel="prefetch" href="img/villager_stopped.png" />
+    <link rel="prefetch" href="img/house.png" />
+    <link rel="prefetch" href="img/barracks.png" />
+    <link rel="prefetch" href="img/blacksmith.gif" />
+    <link rel="prefetch" href="img/university.png" />
+    <link rel="prefetch" href="img/tree.png" />
+    <link rel="prefetch" href="img/palm.png" />
+    <link rel="prefetch" href="img/tree_snow_.png" />
+    <link rel="prefetch" href="img/car.png" />
+    <link rel="prefetch" href="img/eagle.gif" />
+    <link rel="prefetch" href="mp3/music1.mp3" />
+    <link rel="prefetch" href="mp3/music2.mp3" />
+    <link rel="prefetch" href="mp3/wololo.mp3" />
+    <link rel="prefetch" href="mp3/villager.mp3" />
+    <link rel="prefetch" href="mp3/villager2.mp3" />
+    <link rel="prefetch" href="mp3/click.mp3" />
+    <link rel="prefetch" href="mp3/sound_barracks.mp3" />
+    <link rel="prefetch" href="mp3/sound_university.mp3" />
+    <link rel="prefetch" href="mp3/sound_house.mp3" />
+    <link rel="prefetch" href="mp3/sound_blacksmith.mp3" />
+    <link rel="prefetch" href="mp3/car.mp3" />
+
+
+
     <link rel="shortcut icon" href="favicon.ico">
 
 
