--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@
 
 
         <div id="villager">&nbsp;</div>
-        <div id="eagle">&nbsp;</div>
+        <div id="eagle" style="display:none;">&nbsp;</div>
 
 
-        <div id="tooltip">Puedes usar el teclado o el ratón para moverte</div>
+        <div id="tooltip">Usa el teclado o el ratón para moverte</div>
 
 
     </div>
