--- a/en.html
+++ b/en.html
@@ -176,10 +176,10 @@
 
 
         <div id="villager">&nbsp;</div>
-        <div id="eagle">&nbsp;</div>
+        <div id="eagle" style="display:none;">&nbsp;</div>
 
 
-        <div id="tooltip">You can use the mouse or keyboard to move around the map</div>
+        <div id="tooltip">Use the mouse or keyboard to move around the map</div>
 
 
 
