--- a/en.html
+++ b/en.html
@@ -238,13 +238,13 @@
 
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114321266-1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SSQZ61Y7GC"></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-        gtag('config', 'UA-114321266-1');
+      gtag('config', 'G-SSQZ61Y7GC');
     </script>
 
 </body>
